# Final_Project_sharon_levi_eliad_karni

./: CMakeLists.txt  CMakeSettings.json  Levels.txt  README.docx  cmake_headers_for_diagram.txt  דדליינים לפרויקט.xlsx  דיאגרמת UML -הסברים.docx
Project_sharon_levi_eliad_karni/include/: Controller.h  GameObject.h  Ladder.h  MovingObject.h  RandEnemy.h  Rod.h  SmartEnemy.h
Project_sharon_levi_eliad_karni/resources/: CMakeLists.txt
Project_sharon_levi_eliad_karni/src/: Board.cpp  CollectableObject.cpp  Controller.cpp  DataReader.cpp  GameObject.cpp  GameState.cpp  Menu.cpp  MovingObject.cpp  SmartEnemy.cpp  TimeGift.cpp  Utilities.cpp  Wall.cpp  main.cpp
include/: BadGift.h  Board.h  CMakeLists.txt  Coin.h  CollectableObject.h  Controller.h  DataReader.h  Door.h  EffectsHolder.h  Enemy.h  FoolEnemy.h  GameObject.h  GameObjects.h  GameState.h  Gift.h  Ladder.h  LifeGift.h  Macros.h  Menu.h  MovingObject.h  MovingObjects.h  Player.h  RandEnemy.h  ResoucesHolder.h  Resources.h  Rod.h  ScoreGift.h  SmartEnemy.h  StaticObject.h  StaticObjects.h  TimeGift.h  Utilities.h  Wall.h
resources/: CMakeLists.txt  Levels.txt
resources/Rogue/: climbinfproject.tps  fall.tps  rodding project.tps
resources/Rogue/Run/: sprite.tps
src/: BadGift.cpp  Board.cpp  CMakeLists.txt  Coin.cpp  CollectableObject.cpp  Controller.cpp  DataReader.cpp  Door.cpp  EffectsHolder.cpp  Enemy.cpp  Final_Project_sharon_levi_eliad_karni.cpp  FoolEnemy.cpp  GameObject.cpp  GameState.cpp  Gift.cpp  Ladder.cpp  LifeGift.cpp  Menu.cpp  MovingObject.cpp  Player.cpp  RandEnemy.cpp  ResoucesHolder.cpp  Resources.cpp  Rod.cpp  ScoreGift.cpp  SmartEnemy.cpp  StaticObject.cpp  TimeGift.cpp  Utilities.cpp  Wall.cpp  main.cpp
